# EsportManager2

./: .gitignore  CLAUDE.md  README.md  banpick.md  index.html  menu-manager.skill  package-lock.json  package.json  replace_println.py  tailwind.config.js  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  draft_pool_lck.json  draft_pool_lcs.json  draft_pool_lec.json  draft_pool_lpl.json  tauri.conf.json
src-tauri/migrations/: 000_baseline.sql  001_init.sql  001_initial.sql  002_events.sql  002_honor_engine.sql  003_player_stats.sql  004_transfer_window.sql  005_player_satisfaction.sql  006_draft_auction.sql  007_transfer_market.sql  008_renewal_decisions.sql  008_transfer_rounds.sql  009_llm_task_log.sql  010_migrate_market_phase.sql  010_transfer_system.sql  011_fix_transfer_events.sql  011_simple_transfer.sql  012_add_satisfaction.sql
src-tauri/src/: lib.rs
src-tauri/src/commands/: ai_transfer_commands.rs  awards_commands.rs  champion_commands.rs  dev_commands.rs  draft_auction_commands.rs  draft_commands.rs  event_commands.rs  finance_commands.rs  game_commands.rs  honor_commands.rs  international_commands 2.rs  international_commands.rs  ladder_commands.rs  log_commands.rs  market_commands.rs  match_commands.rs  match_detail_commands.rs  meta_commands.rs  mod.rs  perf_commands.rs  points_commands.rs  query_commands.rs  save_commands.rs  simple_transfer_commands.rs  stats_commands.rs  team_commands 2.rs  team_commands.rs  time_commands.rs  transfer_commands.rs
src-tauri/src/db/: connection 2.rs  connection.rs  migrations.rs  mod.rs  repository.rs
src-tauri/src/engines/: bp_engine.rs  champion.rs  condition.rs  draft.rs  draft_auction.rs  event.rs  financial 2.rs  financial.rs  honor.rs  interest_scoring.rs  lineup_engine.rs  market_value.rs  match_simulation.rs  meta_engine.rs  mod.rs  offer_decision.rs  player_decision.rs  player_performance.rs  points_calculation.rs  power_engine.rs  rookie_generator.rs  satisfaction.rs  scouting.rs  season_progress.rs  simple_transfer_engine.rs  traits.rs  transfer.rs  transfer_market.rs
src-tauri/src/errors/: error_codes.rs  mod.rs
src-tauri/src/models/: ai_transfer.rs  draft.rs  draft_auction.rs  event.rs  financial.rs  game_time.rs  honor.rs  init_config.rs  llm_task_log.rs  market_state.rs  match_game_detail.rs  match_record.rs  meta.rs  mod.rs  negotiation.rs  player.rs  player_stats.rs  player_status.rs  player_transfer_strategy.rs  save.rs  season.rs  simple_transfer.rs  standings.rs  (+4 more)
(+416 files in other folders)
